<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_github"
        android:icon="@drawable/ic_github"
        android:title="@string/action_github"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tutorial"
        android:icon="@drawable/ic_tutorial"
        android:title="@string/title_show_tutorials"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_changelog"
        android:icon="@drawable/ic_info"
        android:title="@string/changelog"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_intro"
        android:icon="@drawable/ic_info"
        android:title="@string/intro"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>